--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -3,7 +3,7 @@ FROM meedan/ruby
 MAINTAINER sysops@meedan.com
 
 ENV DEPLOYUSER=checkdeploy \
-    DEPLOYDIR=/app \
+    DEPLOYDIR=/app/current \
     RAILS_ENV=production \
     GITREPO=git@github.com:meedan/check-api.git \
     PRODUCT=check \
@@ -13,13 +13,6 @@ ENV DEPLOYUSER=checkdeploy \
     MAX_POOL_SIZE=12 \
     PERSIST_DIRS="uploads project_export"
     # MIN_INSTANCES and MAX_POOL_SIZE control the pool size of passenger
-
-#
-# DEPENDENCIES
-#
-
-# imagemagick
-RUN apt-get update && apt-get install -y --no-install-recommends imagemagick
 
 #
 # SYSTEM CONFIG
@@ -40,32 +33,26 @@ RUN useradd ${DEPLOYUSER} -s /bin/bash -m
 #
 # code deployment
 #
-RUN mkdir -p ${DEPLOYDIR}/latest \
+RUN mkdir -p ${DEPLOYDIR} \
     && chown -R ${DEPLOYUSER}:www-data ${DEPLOYDIR} \
     && chmod -R 775 ${DEPLOYDIR} \
-    && chmod g+s ${DEPLOYDIR}/latest
+    && chmod g+s ${DEPLOYDIR}
 
 WORKDIR ${DEPLOYDIR}
 
 # install the gems
-COPY ./Gemfile ./latest/Gemfile
-COPY ./Gemfile.lock ./latest/Gemfile.lock
 USER ${DEPLOYUSER}
+# COPY's `--chown` directive cannot utilize environmental variables
+# so we mimic `--chown=${DEPLOYUSER}:www-data`
+COPY --chown=checkdeploy:www-data ./Gemfile ${DEPLOYDIR}/Gemfile
+COPY --chown=checkdeploy:www-data ./Gemfile.lock ${DEPLOYDIR}/Gemfile.lock
 RUN echo "gem: --no-rdoc --no-ri" > ~/.gemrc \
-    && cd ./latest \
     && bundle install  --jobs 20 --retry 5 --deployment --without test development
 
-USER root
-
-# deployment scripts
-COPY production/bin /opt/bin
-RUN chmod 755 /opt/bin/*
-
 # copy in the code
-COPY . ./latest
-RUN chown -R ${DEPLOYUSER}:www-data ${DEPLOYDIR} \
-    && chmod -R 775 ${DEPLOYDIR} \
-    && chmod g+s ${DEPLOYDIR}/latest
+# COPY's `--chown` directive cannot utilize environmental variables
+# so we mimic `--chown=${DEPLOYUSER}:www-data`
+COPY --chown=checkdeploy:www-data . ${DEPLOYDIR}
 USER ${DEPLOYUSER}
 
 # link config files
@@ -74,7 +61,11 @@ RUN /opt/bin/find_and_link_config_files.sh ${DEPLOYDIR}/latest
 RUN for d in ${PERSIST_DIRS}; do mkdir -p ${DEPLOYDIR}/shared/files/${d} \
     && ln -s ${DEPLOYDIR}/shared/files/${d} ${DEPLOYDIR}/latest/public/${d}; done
 
-RUN ln -s ./latest ./${APP}-$(date -I) && ln -s ./${APP}-$(date -I) ./current
+RUN ln -s ${DEPLOYDIR} /app/${APP}-$(date -I)
+
+USER root
+# deployment scripts
+COPY production/bin /opt/bin
 
 #
 # RUNTIME ELEMENTS
@@ -83,6 +74,5 @@ RUN ln -s ./latest ./${APP}-$(date -I) && ln -s ./${APP}-$(date -I) ./current
 # expose apollo optics port
 EXPOSE 3001
 
-USER root
 WORKDIR ${DEPLOYDIR}/current
 CMD ["/opt/bin/start.sh"]
