--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -15,6 +15,11 @@ ENV DEPLOYUSER=checkdeploy \
     # MIN_INSTANCES and MAX_POOL_SIZE control the pool size of passenger
 
 #
+# USER CONFIG
+#
+RUN useradd ${DEPLOYUSER} -s /bin/bash -m
+
+#
 # SYSTEM CONFIG
 #
 
@@ -24,6 +29,9 @@ COPY --chown=checkdeploy:www-data production/config/nginx/test_404.conf /etc/ngi
 RUN sed -i "s/ddDEPLOYUSERdd/checkdeploy/g" /etc/nginx/sites-available/${APP} \
     && ln -s /etc/nginx/sites-available/${APP} /etc/nginx/sites-enabled/${APP} \
     && rm /etc/nginx/sites-enabled/default
+
+# CMD and helper scripts
+COPY --chown=root:root production/bin /opt/bin
 
 #
 # code deployment
@@ -48,19 +56,17 @@ RUN echo "gem: --no-rdoc --no-ri" > ~/.gemrc \
 # COPY's `--chown` directive cannot utilize environmental variables
 # so we mimic `--chown=${DEPLOYUSER}:www-data`
 COPY --chown=checkdeploy:www-data . ${DEPLOYDIR}
-USER ${DEPLOYUSER}
+
+USER root
 
 # link config files
-RUN /opt/bin/find_and_link_config_files.sh ${DEPLOYDIR}/latest
+RUN /opt/bin/find_and_link_config_files.sh ${DEPLOYDIR}
 # persist these directories
-RUN for d in ${PERSIST_DIRS}; do mkdir -p ${DEPLOYDIR}/shared/files/${d} \
-    && ln -s ${DEPLOYDIR}/shared/files/${d} ${DEPLOYDIR}/latest/public/${d}; done
+RUN for d in ${PERSIST_DIRS}; do mkdir -p /app/shared/files/${d} \
+    && ln -s /app/shared/files/${d} ${DEPLOYDIR}/public/${d}; done
 
 RUN ln -s ${DEPLOYDIR} /app/${APP}-$(date -I)
 
-USER root
-# deployment scripts
-COPY production/bin /opt/bin
 
 #
 # RUNTIME ELEMENTS
@@ -69,5 +75,5 @@ COPY production/bin /opt/bin
 # expose apollo optics port
 EXPOSE 3001
 
-WORKDIR ${DEPLOYDIR}/current
+WORKDIR ${DEPLOYDIR}
 CMD ["/opt/bin/start.sh"]
