Revert "Ticket #6658: Change Nginx port on production"
This reverts commit b13e809911e38deccbf3b4f61146f7584ce564a0.

--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -72,5 +72,8 @@ RUN ln -s ${DEPLOYDIR} /app/${APP}-$(date -I)
 # RUNTIME ELEMENTS
 # expose, cmd
 
+# expose apollo optics port
+EXPOSE 3001
+
 WORKDIR ${DEPLOYDIR}
 CMD ["/opt/bin/start.sh"]
