Ticket #6658: Run Apollo in production

--- a/production/config/nginx/app.conf
+++ b/production/config/nginx/app.conf
@@ -2,6 +2,13 @@
 
 server {
      listen 80 default_server;
+     location / {
+       proxy_pass http://127.0.0.1:3300;
+     }
+}
+
+server {
+     listen 8000 default_server;
      root /app/current/public;
      try_files $uri $uri/index.html @passenger;
      location @passenger {
@@ -27,4 +34,4 @@ server {
 passenger_max_pool_size ddMAX_POOL_SIZEdd;
 
 # https://www.phusionpassenger.com/library/config/nginx/reference/#passenger_pre_start
-passenger_pre_start http://127.0.0.1/api/me;
+passenger_pre_start http://127.0.0.1:8000/api/me;
