--- a/production/config/nginx/app.conf
+++ b/production/config/nginx/app.conf
@@ -3,6 +3,7 @@
 server {
      listen 80 default_server;
      location / {
+       proxy_set_header Host $http_host;
        proxy_pass http://127.0.0.1:3300;
      }
 }
