Ticket #6658: Use our own fork of apollo-tracing gem

--- a/.gitignore
+++ b/.gitignore
@@ -37,4 +37,5 @@ coverage/*
 *.css.map
 config/apollo-engine-proxy.json
 config/apollo-engine-proxy.json.local
+config/apollo-engine-proxy.json.qa
 public/project_export
