--- a/production/config/nginx/app.conf
+++ b/production/config/nginx/app.conf
@@ -2,9 +2,16 @@
 
 server {
      listen 80 default_server;
+ 
      location / {
        proxy_set_header Host $http_host;
+       proxy_intercept_errors on;
+       error_page 502 503 = @fallback;
        proxy_pass http://127.0.0.1:3300;
+     }
+
+     location @fallback {
+       proxy_pass http://127.0.0.1:8000;
      }
 }
 
