--- a/production/config/nginx/app.conf
+++ b/production/config/nginx/app.conf
@@ -11,6 +11,7 @@ server {
      }
 
      location @fallback {
+       proxy_set_header Host $http_host;
        proxy_pass http://127.0.0.1:8000;
      }
 }
