Ticket #6658: Fallback on error 500 as well

--- a/production/config/nginx/app.conf
+++ b/production/config/nginx/app.conf
@@ -6,7 +6,7 @@ server {
      location / {
        proxy_set_header Host $http_host;
        proxy_intercept_errors on;
-       error_page 502 503 = @fallback;
+       error_page 500 502 503 = @fallback;
        proxy_pass http://127.0.0.1:3300;
      }
 
