--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ before_install:
 - sudo rm /etc/apt/sources.list.d/mongodb*
 - sudo apt-get -qq update
 - sudo apt-get install wget openjdk-7-jre redis-server imagemagick
-- wget https://download.elasticsearch.org/elasticsearch/elasticsearch/elasticsearch-2.4.1.deb
-  && sudo dpkg -i --force-confnew elasticsearch-2.4.1.deb && sudo service elasticsearch
+- wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.3.1.deb
+- wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.3.1.deb.sha512
+  && shasum -a 512 -c elasticsearch-6.3.1.deb.sha512 && sudo dpkg -i --force-confnew elasticsearch-6.3.1.deb && sudo service elasticsearch
   restart
 - redis-server &
 - git clone https://${TOKEN}:x-oauth-basic@github.com/meedan/configurator ./configurator
@@ -22,7 +23,7 @@ bundler_args: "--jobs 3 --retry 3 --without nothing --path=/tmp/bundler"
 before_script:
 - sleep 15
 - 'echo "script.engine.groovy.inline.update: on" | sudo tee -a /etc/elasticsearch/elasticsearch.yml'
-- sudo /usr/share/elasticsearch/bin/plugin install analysis-icu
+- sudo /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu
 - sudo service elasticsearch restart
 - sleep 15
 - d=configurator/$APP/travis/check-api/; for f in $(find $d -type f); do cp "$f" "${f/$d/}"; done
