Ticket #7030: Adding configuration key to toggle PGHero

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -52,6 +52,7 @@ development: &default
   cc_deville_httpauth:
   google_analytics_code: # Format: 'UA-000000000-1'
   export_download_expiration_days: 7
+  pg_hero_enabled: true
 
 test:
   <<: *default
