Tickets #6058, #7066, #7028 and #6994: Bot Garden :robot_face: :sunflower:

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ config/apollo-engine-proxy.json
 config/apollo-engine-proxy.json.local
 config/apollo-engine-proxy.json.qa
 public/project_export
+public/events.json
