--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,10 @@ before_install:
 - sudo apt-get install wget openjdk-7-jre redis-server imagemagick
 - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.3.1.deb
 - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.3.1.deb.sha512
-  && shasum -a 512 -c elasticsearch-6.3.1.deb.sha512 && sudo dpkg -i --force-confnew elasticsearch-6.3.1.deb && sudo service elasticsearch
-  restart
+  && shasum -a 512 -c elasticsearch-6.3.1.deb.sha512 && sudo dpkg -i --force-confnew elasticsearch-6.3.1.deb
 - sudo /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu
 - sudo service elasticsearch restart
-- sleep 15
-- sudo service elasticsearch status
+- wget -q --waitretry=1 --retry-connrefused -T 10 -O - http://127.0.0.1:9200- sudo service elasticsearch status
 - redis-server &
 - git clone https://${TOKEN}:x-oauth-basic@github.com/meedan/configurator ./configurator
 - d=configurator/$APP/travis/check-api/; for f in $(find $d -type f); do cp "$f" "${f/$d/}"; done
@@ -29,7 +27,7 @@ addons:
 bundler_args: "--jobs 3 --retry 3 --without nothing --path=/tmp/bundler"
 before_script:
 - cd scripts && ./setup-parallel-env.sh && cd -
-script: bundle exec rake "parallel:test[3]"
+script: ruby -I"lib:test" test/models/task_test.rb -n /.*Slack.*/
 after_script:
 - bundle exec codeclimate-test-reporter
 rvm:
