--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,4 @@ config/apollo-engine-proxy.json.local
 config/apollo-engine-proxy.json.qa
 public/project_export
 public/events.json
+config/credentials.json
