--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,10 @@ before_install:
 - sudo apt-get install wget openjdk-7-jre redis-server imagemagick
 - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.3.1.deb
 - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.3.1.deb.sha512
-  && shasum -a 512 -c elasticsearch-6.3.1.deb.sha512 && sudo dpkg -i --force-confnew elasticsearch-6.3.1.deb && sudo service elasticsearch
-  restart
+  && shasum -a 512 -c elasticsearch-6.3.1.deb.sha512 && sudo dpkg -i --force-confnew elasticsearch-6.3.1.deb
 - sudo /usr/share/elasticsearch/bin/elasticsearch-plugin install analysis-icu
 - sudo service elasticsearch restart
-- sleep 15
+- wget -q --waitretry=1 --retry-connrefused -t 0 -T 10 -O - http://127.0.0.1:9200
 - sudo service elasticsearch status
 - redis-server &
 - git clone https://${TOKEN}:x-oauth-basic@github.com/meedan/configurator ./configurator
@@ -28,7 +27,7 @@ addons:
   postgresql: '9.4'
 bundler_args: "--jobs 3 --retry 3 --without nothing --path=/tmp/bundler"
 before_script:
-- cd scripts && ./setup-parallel-env.sh && cd -
+- cd test && ./setup-parallel-env.sh && cd -
 script: bundle exec rake "parallel:test[3]"
 after_script:
 - bundle exec codeclimate-test-reporter
