--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -7,8 +7,7 @@ checks:
     config:
       threshold: 4
   file-lines:
-    config:
-      threshold: 250
+    enabled: false
   method-complexity:
     config:
       threshold: 18
@@ -16,8 +15,7 @@ checks:
     config:
       threshold: 50
   method-lines:
-    config:
-      threshold: 30
+    enabled: false
   nested-control-flow:
     config:
       threshold: 4
