Ticket #7262: Send published meme to Smooch users

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ public/project_export
 public/events.json
 config/credentials.json
 *.rdb
+public/memebuster/*
+!public/memebuster/default-template.svg
