--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 - export GEM_PATH=/tmp/bundler/ruby/2.3.0/gems:$GEM_PATH
 - sudo rm /etc/apt/sources.list.d/mongodb*
 - sudo apt-get -qq update
-- sudo apt-get install wget openjdk-7-jre redis-server imagemagick
+- sudo apt-get install wget openjdk-7-jre redis-server imagemagick fontconfig libfontconfig
 - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.3.1.deb
 - wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.3.1.deb.sha512
   && shasum -a 512 -c elasticsearch-6.3.1.deb.sha512 && sudo dpkg -i --force-confnew elasticsearch-6.3.1.deb
@@ -19,14 +19,21 @@ before_install:
 - d=configurator/$APP/travis/check-api/; for f in $(find $d -type f); do cp "$f" "${f/$d/}"; done
 - rm -rf tmp/cache tmp/cache1 tmp/cache2 tmp/cache3 && mkdir -p tmp/cache tmp/cache1
   tmp/cache2 tmp/cache3
+- wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2 &&
+  tar -vxjf phantomjs-2.1.1-linux-x86_64.tar.bz2 &&
+  sudo mv phantomjs-2.1.1-linux-x86_64/bin/phantomjs /usr/bin/
 cache:
   directories:
   - "/tmp/bundler"
 addons:
   postgresql: '9.4'
+  hosts:
+  - api
 bundler_args: "--jobs 3 --retry 3 --without nothing --path=/tmp/bundler"
 before_script:
 - cd test && ./setup-parallel-env.sh && cd -
+- bundle exec thin -p 3000 -e test -t 60 --threadpool-size=60 --threaded start >/dev/null &
+- sleep 10
 script: bundle exec rake "parallel:test[3]"
 after_script:
 - bundle exec codeclimate-test-reporter
