--- a/config/cleandb.yml.example
+++ b/config/cleandb.yml.example
@@ -4,4 +4,6 @@ email_exceptions:
 slack_settings:
   slack_webhook: 'webhook url'
   slack_channel: '#channel-name'
-
+bot_urls:
+  'bot_identifier_1': 'bot 1 url'
+  'bot_identifier_2': 'bot 2 url'
