Reset bot settings on QA

--- a/config/cleandb.yml.example
+++ b/config/cleandb.yml.example
@@ -7,3 +7,6 @@ slack_settings:
 bot_urls:
   'bot_identifier_1': 'bot 1 url'
   'bot_identifier_2': 'bot 2 url'
+bot_settings:
+  bot_installation_id_1: 'bot installation 1 settings as JSON string'
+  bot_installation_id_2: 'bot installation 2 settings as JSON string'
