--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -12,7 +12,8 @@ ENV DEPLOYUSER=checkdeploy \
     MIN_INSTANCES=4 \
     MAX_POOL_SIZE=12 \
     PERSIST_DIRS="uploads project_export memebuster" \
-    MALLOC_ARENA_MAX=2 # https://www.mikeperham.com/2018/04/25/taming-rails-memory-bloat/
+    MALLOC_ARENA_MAX=2
+    # MALLOC_ARENA MAX is needed because of https://www.mikeperham.com/2018/04/25/taming-rails-memory-bloat/
     # MIN_INSTANCES and MAX_POOL_SIZE control the pool size of passenger
 
 #
