--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -251,6 +251,7 @@ Metrics/ParameterLists:
   Description: 'Avoid parameter lists longer than three or four parameters.'
   StyleGuide: 'https://github.com/bbatsov/ruby-style-guide#too-many-params'
   Enabled: true
+  Max: 6
 
 Metrics/PerceivedComplexity:
   Description: >-
