Removing "public/memebuster" directory

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ config/credentials.json
 public/memebuster/*
 !public/memebuster/default-template.svg
 tmp/parallel_runtime_test.log
+public/memebuster
