Tickets #7450, #7451, #7454, #7455 and #7456: Multiple bug fixes (including three reported by Errbit) and running load test on Travis only if a string is present in the commit message

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,7 @@ matrix:
   - env: APP=bridge
   # Load testing
   - env: APP=check
+    if: commit_message =~ /\[load test\]/
     language: node_js
     sudo: required
     dist: trusty
