Tickets #7404 and #7458: Return source and target medias on the root of a relationship mutation, use a different Sidekiq queue depending on the header, fixing Code Climate issues and include custom tasks on embed

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -55,6 +55,7 @@ exclude_patterns:
 - "public/javascripts"
 - "lib/sample_data.rb"
 - "app/controllers/*.rb"
+- "app/models/bot/alegre.rb"
 - "!app/controllers/application_controller.rb"
 - "db/migrate"
 - "app/graphql"
