Ticket #7472: Just call Pusher global channel, use specific queue for Pusher with lower priority and do not retry Pusher jobs

--- a/config/sidekiq.yml.example
+++ b/config/sidekiq.yml.example
@@ -3,7 +3,8 @@
 :redis_port: 6379
 :redis_database: 1
 :queues:
-  - ["default", 1]
-  - ["esqueue", 1]
-  - ["smooch", 1]
-  - ["smooch_ping", 1]
+  - ["esqueue", 4]
+  - ["default", 2]
+  - ["smooch", 2]
+  - ["smooch_ping", 2]
+  - ["pusher", 1]
