--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -59,6 +59,7 @@ development: &default
   privacy_email: ''
   google_credentials_path: '/path/to/credentials.json'
   bitly_key: 'bitly-key'
+  failed_attempts: 4
   google_client_id:
   google_client_secret:
 
