Improving tests performance

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,8 +22,8 @@ before_install:
 - redis-server &
 - git clone https://${TOKEN}:x-oauth-basic@github.com/meedan/configurator ./configurator
 - d=configurator/$APP/travis/check-api/; for f in $(find $d -type f); do cp "$f" "${f/$d/}"; done
-- rm -rf tmp/cache tmp/cache1 tmp/cache2 tmp/cache3 tmp/cache4 && mkdir -p tmp/cache tmp/cache1
-  tmp/cache2 tmp/cache3 tmp/cache4
+- rm -rf tmp/cache tmp/cache1 tmp/cache2 tmp/cache3 tmp/cache4 tmp/cache5 && mkdir -p tmp/cache tmp/cache1
+  tmp/cache2 tmp/cache3 tmp/cache4 tmp/cache5
 - cd /tmp/downloads &&
   (ls phantomjs-2.1.1-linux-x86_64.tar.bz2 || wget https://bitbucket.org/ariya/phantomjs/downloads/phantomjs-2.1.1-linux-x86_64.tar.bz2) &&
   tar -vxjf phantomjs-2.1.1-linux-x86_64.tar.bz2 &&
