Ticket #7618: Separate configuration key for CORS headers

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -64,6 +64,8 @@ development: &default
   google_client_id:
   google_client_secret:
   google_auth_redirect_uri:
+  # for production, don't use a wildcard: set the allowed domains explicitly, as a regular expression, for example: '(https?://.*\.?(meedan.com|meedan.org))'
+  allowed_origins: '.*'
 
 test:
   <<: *default
