--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -55,6 +55,7 @@ development: &default
   export_download_expiration_days: 7
   pg_hero_enabled: true
   tos_url: 'https://meedan.com/en/check/check_tos.html'
+  tos_smooch_url: 'https://meedan.com/en/check/check_message_tos.html'
   privacy_policy_url: 'https://meedan.com/en/check/check_privacy.html'
   privacy_email: ''
   google_credentials_path: '/path/to/credentials.json'
