Ticket #7670: Replace "bot passthru" command by "bot send [message]" command on Slack Bot

--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -69,6 +69,21 @@ development: &default
   # for production, don't use a wildcard: set the allowed domains explicitly, as a regular expression, for example: '(https?://.*\.?(meedan.com|meedan.org))'
   allowed_origins: '.*'
   storage:
+    # If you are using Amazon S3, the user should have permissions like the one below and the bucket must be publicly readable
+    # {
+    #   "Version": "2012-10-17",
+    #   "Statement": [
+    #     {
+    #       "Sid": "VisualEditor0",
+    #       "Effect": "Allow",
+    #       "Action": "s3:*",
+    #       "Resource": [
+    #         "arn:aws:s3:::bucket-name/*",
+    #         "arn:aws:s3:::bucket-name"
+    #       ]
+    #     }
+    #   ]
+    # }
     endpoint:
     public_endpoint:
     access_key:
