--- a/config/config.yml.example
+++ b/config/config.yml.example
@@ -68,6 +68,10 @@ development: &default
   google_auth_redirect_uri:
   # for production, don't use a wildcard: set the allowed domains explicitly, as a regular expression, for example: '(https?://.*\.?(meedan.com|meedan.org))'
   allowed_origins: '.*'
+  smooch_twitter_consumer_key:
+  smooch_twitter_consumer_secret:
+  smooch_twitter_tier:
+  smooch_twitter_env_name:
   storage:
     # If you are using Amazon S3, the user should have permissions like the one below and the bucket must be publicly readable
     # {
