Ticket #7710: Fix errbit example for newer version of Airbrake

--- a/config/initializers/errbit.rb.example
+++ b/config/initializers/errbit.rb.example
@@ -1,8 +1,7 @@
 Airbrake.configure do |config|
-  config.api_key = '%errbit_token%'
-  config.host    = '%errbit_host%'
-  config.port    = %errbit_port%
-  config.secure  = config.port == 443
-  config.development_environments = []
+  config.project_key = '%errbit_token%'
+  config.project_id = 1
+  config.host    = 'https://%errbit_host%:%errbit_port%'
+  config.ignore_environments = %w(development test cucumber)
   config.environment_name = `hostname`  
 end
