Ticket #7710: Fix airbrake syntax

--- a/config/initializers/errbit.rb.example
+++ b/config/initializers/errbit.rb.example
@@ -3,5 +3,5 @@ Airbrake.configure do |config|
   config.project_id = 1
   config.host    = 'https://%errbit_host%:%errbit_port%'
   config.ignore_environments = %w(development test cucumber)
-  config.environment_name = `hostname`  
+  config.environment = `hostname`
 end
