add run_migrations_qa and run_migrations_live to pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ stages:
   #- test
   - build
   - deploy
+  - migrations
 
 
 build_qa:
@@ -24,6 +25,30 @@ build_qa:
     - d=configurator/check/qa/check-api/; for f in $(find $d -type f); do cp "$f" "${f/$d/}"; done
     - docker build  -f Dockerfile.production.aws -t "$ECR_API_BASE_URL/qa/check/api:$CI_COMMIT_SHA"  .
     - docker push "$ECR_API_BASE_URL/qa/check/api:$CI_COMMIT_SHA"
+  only:
+    - develop
+
+run_migrations_qa:
+  image: docker:latest
+  stage: migrations
+  services:
+    - docker:dind
+  tags:
+    - meedan
+    - meedan-labs
+  variables:
+    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
+    GITHUB_TOKEN: $GITHUB_TOKEN
+  script:
+    - apk add --no-cache curl jq python py-pip git
+    - pip install docutils==0.14
+    - pip install awscli==1.16.201
+    - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+    - docker pull $ECR_API_BASE_URL/aws-long-tasks:latest
+    - git clone https://${GITHUB_TOKEN}:x-oauth-basic@github.com/meedan/configurator ./configurator
+    - docker run --env-file=configurator/check/aws-long-tasks/.env_file_qa_migrate $ECR_API_BASE_URL/aws-long-tasks:latest
   only:
     - develop
 
@@ -84,5 +109,29 @@ deploy_live:
     - pip install ecs-deploy==1.7.0
     - ecs deploy ecs-live  live-check-api --image live-check-api-c $ECR_API_BASE_URL/live/check/api:$CI_COMMIT_SHA  --timeout 3600
     - echo "new Image was deployed $ECR_API_BASE_URL/live/check/api:$CI_COMMIT_SHA"
+  only:
+    - master
+
+run_migrations_live:
+  image: docker:latest
+  stage: migrations
+  services:
+    - docker:dind
+  tags:
+    - meedan
+    - meedan-labs
+  variables:
+    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
+    GITHUB_TOKEN: $GITHUB_TOKEN
+  script:
+    - apk add --no-cache curl jq python py-pip git
+    - pip install docutils==0.14
+    - pip install awscli==1.16.201
+    - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
+    - docker pull $ECR_API_BASE_URL/aws-long-tasks:latest
+    - git clone https://${GITHUB_TOKEN}:x-oauth-basic@github.com/meedan/configurator ./configurator
+    - docker run --env-file=configurator/check/aws-long-tasks/.env_file_live_migrate $ECR_API_BASE_URL/aws-long-tasks:latest
   only:
     - master
