Created new startup script for background processing. Reverted old start.sh for linode. Updated Dockerfile to call start.sh as entrypoint so that it can be overidden easily

--- a/Dockerfile.production.aws
+++ b/Dockerfile.production.aws
@@ -85,4 +85,4 @@ RUN ln -s ${DEPLOYDIR} /app/${APP}-$(date -I)
 EXPOSE 3300
 
 WORKDIR ${DEPLOYDIR}
-CMD ["/opt/bin/start.sh"]
+ENTRYPOINT ["/opt/bin/start.sh"]
