--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,6 @@ stages:
   #- test
   - build
   - deploy
-  - migrations
 
 
 build_qa:
@@ -28,9 +27,9 @@ build_qa:
   only:
     - develop
 
-run_migrations_qa:
+deploy_qa:
   image: docker:latest
-  stage: migrations
+  stage: deploy
   services:
     - docker:dind
   tags:
@@ -43,31 +42,17 @@ run_migrations_qa:
     GITHUB_TOKEN: $GITHUB_TOKEN
   script:
     - apk add --no-cache curl jq python py-pip git
+    - pip install ecs-deploy==1.7.0
     - pip install docutils==0.14
     - pip install awscli==1.16.201
+    - ecs deploy ecs-qa  qa-check-api --image qa-check-api-c $ECR_API_BASE_URL/qa/check/api:$CI_COMMIT_SHA  --timeout 3600
+    - ecs deploy ecs-qa  qa-check-api-background --image qa-check-api-background $ECR_API_BASE_URL/qa/check/api:$CI_COMMIT_SHA  --timeout 3600
+    - echo "new Image was deployed $ECR_API_BASE_URL/qa/check/api:$CI_COMMIT_SHA"
+    - echo "Running Migrations"
     - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
     - docker pull $ECR_API_BASE_URL/aws-long-tasks:latest
     - git clone https://${GITHUB_TOKEN}:x-oauth-basic@github.com/meedan/configurator ./configurator
     - docker run --env-file=configurator/check/aws-long-tasks/.env_file_qa_migrate $ECR_API_BASE_URL/aws-long-tasks:latest
-  only:
-    - develop
-
-deploy_qa:
-  image: python:3-alpine
-  stage: deploy
-  tags:
-    - meedan
-    - meedan-labs
-  variables:
-    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
-  script:
-    - apk add --no-cache curl jq python py-pip git
-    - pip install ecs-deploy==1.7.0
-    - ecs deploy ecs-qa  qa-check-api --image qa-check-api-c $ECR_API_BASE_URL/qa/check/api:$CI_COMMIT_SHA  --timeout 3600
-    - ecs deploy ecs-qa  qa-check-api-background --image qa-check-api-background $ECR_API_BASE_URL/qa/check/api:$CI_COMMIT_SHA  --timeout 3600
-    - echo "new Image was deployed $ECR_API_BASE_URL/qa/check/api:$CI_COMMIT_SHA"
   only:
     - develop
 
@@ -95,30 +80,11 @@ build_live:
     - master
 
 deploy_live:
-  image: python:3-alpine
-  stage: deploy
-  when: manual
-  tags:
-    - meedan
-    - meedan-labs
-  variables:
-    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
-    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
-  script:
-    - apk add --no-cache curl jq python py-pip git
-    - pip install ecs-deploy==1.7.0
-    - ecs deploy ecs-live  live-check-api --image live-check-api-c $ECR_API_BASE_URL/live/check/api:$CI_COMMIT_SHA  --timeout 3600
-    - ecs deploy ecs-live  live-check-api-background --image live-check-api-background $ECR_API_BASE_URL/live/check/api:$CI_COMMIT_SHA  --timeout 3600
-    - echo "new Image was deployed $ECR_API_BASE_URL/live/check/api:$CI_COMMIT_SHA"
-  only:
-    - master
-
-run_migrations_live:
   image: docker:latest
-  stage: migrations
+  stage: deploy
   services:
     - docker:dind
+  when: manual
   tags:
     - meedan
     - meedan-labs
@@ -129,8 +95,13 @@ run_migrations_live:
     GITHUB_TOKEN: $GITHUB_TOKEN
   script:
     - apk add --no-cache curl jq python py-pip git
+    - pip install ecs-deploy==1.7.0
     - pip install docutils==0.14
     - pip install awscli==1.16.201
+    - ecs deploy ecs-live  live-check-api --image live-check-api-c $ECR_API_BASE_URL/live/check/api:$CI_COMMIT_SHA  --timeout 3600
+    - ecs deploy ecs-live  live-check-api-background --image live-check-api-background $ECR_API_BASE_URL/live/check/api:$CI_COMMIT_SHA  --timeout 3600
+    - echo "new Image was deployed $ECR_API_BASE_URL/live/check/api:$CI_COMMIT_SHA"
+    - echo "Running Migrations"
     - $(aws ecr get-login --no-include-email --region $AWS_DEFAULT_REGION)
     - docker pull $ECR_API_BASE_URL/aws-long-tasks:latest
     - git clone https://${GITHUB_TOKEN}:x-oauth-basic@github.com/meedan/configurator ./configurator
