--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,12 @@ before_install:
 - export RECORD_RUNTIME=true
 - export PATH=/tmp/bundler/ruby/2.3.0/bin:$PATH
 - export GEM_PATH=/tmp/bundler/ruby/2.3.0/gems:$GEM_PATH
+- sudo add-apt-repository ppa:mc3man/trusty-media -y
 - sudo rm -f /etc/apt/sources.list.d/mongodb*
 - docker run -d -p 9000:9000 -e "MINIO_ACCESS_KEY=AKIAIOSFODNN7EXAMPLE" -e "MINIO_SECRET_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY" minio/minio server /data
 - sudo apt-get -qq update
 - sudo apt-get install wget openjdk-7-jre redis-server imagemagick fontconfig libfontconfig
+- sudo apt-get install ffmpeg gstreamer0.10-ffmpeg ffmpegthumbnailer -y
 - mkdir -p /tmp/downloads &&
   cd /tmp/downloads &&
   (ls elasticsearch-6.3.1.deb || wget https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-6.3.1.deb) &&
