--- a/Dockerfile.production.aws
+++ b/Dockerfile.production.aws
@@ -26,6 +26,7 @@ RUN useradd ${DEPLOYUSER} -s /bin/bash -m
 #
 
 # dependencies
+RUN add-apt-repository ppa:mc3man/trusty-media -y
 RUN apt-get update -qq && apt-get install -y ffmpeg gstreamer0.10-ffmpeg ffmpegthumbnailer fontconfig libfontconfig ttf-devanagari-fonts ttf-bengali-fonts ttf-gujarati-fonts ttf-telugu-fonts ttf-tamil-fonts ttf-malayalam-fonts
 
 # phantomjs
