--- a/production/config/nginx/app.conf
+++ b/production/config/nginx/app.conf
@@ -30,8 +30,9 @@ server {
 
      # 4M limit for file upload enforced by nginx
      # the env var is fed to the app so it can provide an error message at the same limit
-     client_max_body_size 4M;
+     client_max_body_size 20M;
      passenger_env_var MAX_UPLOAD_SIZE 4M;
+     passenger_env_var MAX_VIDEO_SIZE 20M;
 
      # don't allow `/test` unless RAILS_ENV is set to 'test'
      include /etc/nginx/sites-available/test_404.conf;
